# Makarov-Project

./: CMakeLists.txt  Makefile  README.mdNOrTvY.bck  shell.nix
